--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -30,8 +30,12 @@
   pages = "1289--1309"
 }
 
-
-
+@Book{le:2002,
+  author = 	 "R. J. LeVeque",
+  title = 	 "Finite volume methods for hyperbolic problems",
+  publisher = 	 "Cambridge University Press",
+  year = 	 2002,
+}
 
 @Article{cal:sfv,
   author = {D. Calhoun},
@@ -335,6 +339,12 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
              J. McDonough and J. Periaux and N. Satofuka and D. Tromeur-Dervout",
   address = 	 "{College Park, Maryland, USA}"
 }
+
+@Misc{clawpack,
+  key = "amrclaw",
+  howpublished = "{AMRClaw website: \url{http://www.clawpack.org}}"
+}
+
 
 @Misc{amrclaw,
   key = "amrclaw",
