Add Roe solver reference

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -389,5 +389,18 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
   timestamp = {2012.11.21}
 }
 
+@article{roesolver,
+author = {Roe, P. L.},
+title = {{Approximate Riemann Solvers, Parameter Vectors, and Difference Schemes}},
+journal = {Journal of Computational Physics},
+year = {1981},
+volume = {43},
+number = {2},
+pages = {357--372},
+month = oct
+}
+
+
+
 
 %% ------------------------------ AMR Codes --------------------------------
