Add more AMR and Clawpack refernces

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -400,6 +400,27 @@ pages = {357--372},
 month = oct
 }
 
+@article{Berger:2011du,
+author = {LeVeque, Randall J. and George, David L and Berger, Marsha J},
+title = {{Tsunami Propagation and inundation with adaptively refined finite volume methods}},
+journal = {Acta Numerica},
+year = {2011},
+pages = {211--289}
+}
+
+@article{LeVeque:1997eg,
+author = {LeVeque, Randall J.},
+title = {{Wave Propagation Algorithms for Multidimensional Hyperbolic Systems}},
+journal = {Journal of Computational Physics},
+year = {1997},
+volume = {131},
+number = {2},
+pages = {327--353},
+month = mar
+}
+
+
+
 
 
 
