Add WENO reference

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -419,6 +419,19 @@ pages = {327--353},
 month = mar
 }
 
+@article{Shu:2009bi,
+author = {Shu, Chi-Wang},
+title = {{High Order Weighted Essentially Nonoscillatory Schemes for Convection Dominated Problems}},
+journal = {SIAM Review},
+year = {2009},
+volume = {51},
+number = {1},
+pages = {82--126},
+month = feb
+}
+
+
+
 
 
 
