--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -78,13 +78,13 @@ nontrivial multiblock geometries.
 %
 \end{abstract}
 
-% \begin{keyword}
-% adaptive mesh refinement,
-% wave propagation algorithms
-% clawpack,
-% HPC,
-% manycore
-% \end{keyword}
+\begin{keyword}
+adaptive mesh refinement,
+hyperbolic conservation laws,
+clawpack,
+HPC,
+manycore
+\end{keyword}
 
 \end{frontmatter}
 
@@ -365,6 +365,8 @@ general dynamic AMR procedures used in \pforest-based FE codes \cite[Fig.\
 
 To come...
 
+Parallelization is not completed yet but envisioned for the final version of
+the paper.
 
 \section*{Acknowledgements}
 
