Add more delectable references and some text.

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -430,11 +430,26 @@ pages = {82--126},
 month = feb
 }
 
+@article{manyclaw,
+author = {Terrel, Andy R. and Mandli, Kyle T.},
+title = {{ManyClaw: Slicing and dicing Riemann solvers for next generation highly parallel architectures}},
+journal = {TACC-Intel Symposium on Highly Parallel Architectures},
+year = {2012}
+}
 
+@article{knepleyterrel:2013,
+author = {Knepley, Matthew G. and Terrel, Andy R.},
+title = {{Finite Element Integration on GPUs}},
+journal = {Transactions of Mathematical Software},
+year = {2013},
+volume = {39},
+number = {2}
+}
 
-
-
-
+@Misc{openfoam,
+  key = "openfoam",
+  howpublished = "{OpenFOAM website: \url{http://openfoam.org}}"
+}
 
 
 %% ------------------------------ AMR Codes --------------------------------
