Add PPM reference

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -451,5 +451,14 @@ number = {2}
   howpublished = "{OpenFOAM website: \url{http://openfoam.org}}"
 }
 
+@article{ppm,
+author = {Colella, Phillip and Woodward, Paul R.},
+title = {{The Piecewise Parabolic Method (PPM) for Gas-Dynamical Simulations}},
+journal = {Journal of Computational Physics},
+volume = {54},
+pages = {174--201},
+year = {1984}
+}
+
 
 %% ------------------------------ AMR Codes --------------------------------
