--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -516,4 +516,4 @@ almost arbitrary two-dimensional grids",
   volume = 	 60,
   number = 	 6,
   pages = 	 "606--613",
-  month = 	 November}
+  month = 	 "November"}
