--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -124,8 +124,7 @@ of freedom per cell on
 structured
 \cite{ppm, clawpack}
 or unstructured meshes
-\cite{%ddfv, ausm+,
-openfoam},
+\cite{li:2010, he-hu:2008, do-om:2005, li-sh-sv-va:2007, openfoam},
 where higher order methods have been constructed by widening the stencil, for instance in WENO methods
 \cite{Shu:2009bi}.
 % \comment{Are you looking for
