Added ausm and ddfv refs (for future purposes?)

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -472,18 +472,18 @@ year = {1984}
 }
 
 
-%% ------------------------------ AMR Codes --------------------------------
+%% ------------------------------ END AMR Codes --------------------------------
 
-%% ----------------------------- Unstructured FV schemes -------------------
-@InProceedings{he-hu:2008,
-  author = 	 "R. Herbin and F. Hubert",
-  title = 	 "Benchmark on discretization schemes for anisotropic diffusion problems on general grids",
-  booktitle = "{F}inite {V}olumes for {C}omplex  {A}pplications {V} : {P}roblems and {P}erspectives",
-  pages = 	 "659--692",
-  year = 	 2008,
-  editor = 	 "Robert Eymard and Jean-Marc H\`erard",
-  series = 	 "ISTE",
-  publisher = "Wiley"}
+%% ------------------------ Discrete Duality FV Schemes ------------------------
+@Article{he:2000,
+  author = 	 {F. Hermeline},
+  title = 	 {A finite volume method for the approximation of diffusion operators
+                  on distorted meshes},
+  journal = 	 jcp,
+  year = 	 2000,
+  volume =	 160,
+  pages =	 "481-499",
+}
 
 @Article{do-om:2005,
   author = 	 "K. Domelevo and P. Omnes",
@@ -508,12 +508,35 @@ almost arbitrary two-dimensional grids",
   pages =	 "492--512"
 }
 
+@Article{aa-ei-ma-no:2008,
+  author = 	 "I. Aavatsmark and G. T. Eigestad and B. T. Mallison and J. M. Nordbotten",
+  title = 	 "A compact multipoint flux approximation method with improved robustness",
+  journal = 	 "Num. Meth. for Partial Diff. Eqns.",
+  year = 	 2008,
+  volume = 	 24,
+  number = 	 5,
+  pages = 	 "1329--1360"
+}
+
+@InProceedings{he-hu:2008,
+  author = 	 "R. Herbin and F. Hubert",
+  title = 	 "Benchmark on discretization schemes for anisotropic diffusion problems on general grids",
+  booktitle = "{F}inite {V}olumes for {C}omplex  {A}pplications {V} : {P}roblems and {P}erspectives",
+  pages = 	 "659--692",
+  year = 	 2008,
+  editor = 	 "Robert Eymard and Jean-Marc H\`erard",
+  series = 	 "ISTE",
+  publisher = "Wiley"}
+
+
+
 @Article{li:2010,
   author = 	 "M. S. Liou",
-  title = 	 {{The Evolution of AUSM Schemes}},
-  journal = 	 "{Defence Science Journal}",
+  title = 	 "The Evolution of AUSM Schemes",
+  journal = 	 "Defence Science Journal",
   year = 	 2010,
   volume = 	 60,
   number = 	 6,
   pages = 	 "606--613",
   month = 	 "November"}
+  month = 	 November}
