--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -431,8 +431,8 @@ ${u}$ simulates rigid body rotation.  We show the results at an intermediate tim
 
 \begin{figure}
 \begin{center}
-\plotbox{\includegraphics[width=.4\columnwidth]{quadtree}} \hfil
-% \hspace{.05\columnwidth}
+\plotbox{\includegraphics[width=.4\columnwidth]{quadtree}}
+\hspace{.05\columnwidth}
 \plotbox{\includegraphics[width=.4\columnwidth]{sphere_plot167}}
 \end{center}
 \caption{Numerical results for solving the advection equation.  Left:  Unit
