--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -302,6 +302,17 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
   number = 	 1,
   pages = 	 "4483--4496"}
 
+@Article{ca-he-le:2008,
+  author = 	 {D. A. Calhoun and C. Helzel and R. J. LeVeque},
+  title = 	 {Logically rectangular grids and finite volume
+                    methods for {PDE}s in circular and spherical domains},
+  Journal = 	 {{SIAM} Review},
+  year = 	 2008,
+  volume =       50,
+  pages =        "723--752",
+  number =       4,
+}
+
 
 %% ------------------------------ AMR Codes --------------------------------
 @Article{ma-ol-mo-de-pa:2000,
@@ -462,3 +473,47 @@ year = {1984}
 
 
 %% ------------------------------ AMR Codes --------------------------------
+
+%% ----------------------------- Unstructured FV schemes -------------------
+@InProceedings{he-hu:2008,
+  author = 	 "R. Herbin and F. Hubert",
+  title = 	 "Benchmark on discretization schemes for anisotropic diffusion problems on general grids",
+  booktitle = "{F}inite {V}olumes for {C}omplex  {A}pplications {V} : {P}roblems and {P}erspectives",
+  pages = 	 "659--692",
+  year = 	 2008,
+  editor = 	 "Robert Eymard and Jean-Marc H\`erard",
+  series = 	 "ISTE",
+  publisher = "Wiley"}
+
+@Article{do-om:2005,
+  author = 	 "K. Domelevo and P. Omnes",
+  title = 	 "A finite volume method for the {L}aplace equation on
+almost arbitrary two-dimensional grids",
+  journal = 	 "ESAIM: Mathematical Modelling and Numerical Analysis",
+  year = 	 2005,
+  volume =	 39,
+  number =	 6,
+  pages =	 "1203-1249"
+}
+
+@Article{li-sh-sv-va:2007,
+  author = 	 "K. Lipnikov and M. Shashkov and D. Svyatskiy and
+               Y. Vassilevski",
+  title = 	 "Monotone finite volume schemes for diffusion equations
+                   on unstructured triangular and shape-regular polygonal
+                   meshes",
+  journal = 	 "J. of Comp. Phys.",
+  year = 	 2007,
+  volume =	 227,
+  pages =	 "492--512"
+}
+
+@Article{li:2010,
+  author = 	 "M. S. Liou",
+  title = 	 {{The Evolution of AUSM Schemes}},
+  journal = 	 "{Defence Science Journal}",
+  year = 	 2010,
+  volume = 	 60,
+  number = 	 6,
+  pages = 	 "606--613",
+  month = 	 November}
